force-app/main/default/objects/Batch_Setup__c/Batch_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Setup</label>
</CustomObject>