force-app/main/default/objects/Batch_Setup__c/fields/GetTripBatch__c.field-meta.xml
<CustomField>
    <fullName>GetTripBatch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>GetTripBatch</label>
    <type>Checkbox</type>
</CustomField>