force-app/main/default/objects/Batch_Setup__c/fields/UpdateLastToLastMonthMileagesBatch__c.field-meta.xml
<CustomField>
    <fullName>UpdateLastToLastMonthMileagesBatch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>UpdateLastToLastMonthMileagesBatch</description>
    <inlineHelpText>UpdateLastToLastMonthMileagesBatch</inlineHelpText>
    <label>UpdateLastToLastMonthMileagesBatch</label>
    <type>Checkbox</type>
</CustomField>